--- a/style.css
+++ b/style.css
@@ -33,3 +33,110 @@ body {
 	width:1024px;
 	margin: 0px auto;
 }
+
+.logo{
+	position:relative;
+	width:120px;
+}
+
+.contKeyboard{
+	height:97px;
+}
+
+.keyboard{
+	margin-top:25px;	
+	margin-left:-18px;	
+	position: absolute;
+}
+
+#circle {
+	margin-top:7px;
+	top:0;
+	position: absolute;
+	width: 90px;
+	height: 90px;
+	background: #428bca;
+	border-radius: 50px;
+	-moz-border-radius: 50px;
+	-webkit-border-radius: 50px;
+	-ms-border-radius: 50px;
+	-o-border-radius: 50px;
+	-khtml-border-radius: 50px;
+}
+
+.logoStatic{
+	float:left;
+}
+
+.name{
+	float:left;
+	margin-top:47px;
+	text-transform:uppercase;
+}
+
+nav{
+	float:left;
+	margin-top:70px;
+	margin-left:35px;
+}
+
+nav ul li{
+	float:left;
+	list-style:none;
+	padding:0px 31px;
+	font-family: "Fira Sans Bold";
+	font-size:17px;
+}
+
+nav ul li a{
+	color:black;
+	text-decoration:none;
+}
+
+.contact{
+	float:right;
+	margin-top:43px;
+	font-family: "Fira Sans Bold";
+}
+
+.lineHead{
+	margin-top:12px;
+	height:1px;
+	background:#eaebec;
+	
+	box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+	-moz-   box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+	-ms-    box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+	-o-     box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+	-khtml- box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+}
+
+.clear{
+	clear:both;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
