--- a/style.css
+++ b/style.css
@@ -1,33 +1,7 @@
-﻿@font-face{
-	font-family:"Fira Sans Reg";
-	src: url(FiraSans-Regular.eot); /* for IE 6-8 */
-	src: 	local("☺"), 
-			url(FiraSans-Regular.ttf) format(truetype), /* for firefox3, Safari */
-			url(FiraSans-Regular.woff) format("woff"); /* for IE9 */
+﻿body{
+	font-family: 'Fira Sans', sans-serif;
 }
 
-@font-face{
-	font-family:"Fira Sans Bold";
-	src: url(FiraSans-Bold.eot); /* for IE 6-8 */
-	src: 	local("☺"), 
-			url(FiraSans-Bold.ttf) format(truetype), /* for firefox3, Safari */
-			url(FiraSans-Bold.woff) format("woff"); /* for IE9 */
-}
-
-@font-face{
-	font-family:"Fira Sans Light";
-	src: url(FiraSans-Light.eot); /* for IE 6-8 */
-	src: 	local("☺"), 
-			url(FiraSans-Light.ttf) format(truetype), /* for firefox3, Safari */
-			url(FiraSans-Light.woff) format("woff"); /* for IE9 */
-}
-
-body {
-	font-size: 14px;
-	font-family: "Fira Sans Reg", sans-serif;
-	padding: 0px;
-	margin: 0px;
-}
 
 .container {
 	width:1024px;
@@ -84,19 +58,18 @@ nav ul li{
 	float:left;
 	list-style:none;
 	padding:0px 31px;
-	font-family: "Fira Sans Bold";
-	font-size:17px;
 }
 
 nav ul li a{
 	color:black;
+	font-size:17px;
+	font-weight: 700;
 	text-decoration:none;
 }
 
 .contact{
 	float:right;
 	margin-top:43px;
-	font-family: "Fira Sans Bold";
 }
 
 .lineHead{
