--- a/style.css
+++ b/style.css
@@ -58,7 +58,17 @@ nav ul li{
 	float:left;
 	list-style:none;
 	padding:0px 31px;
+	-border: 1px solid blue;
 }
+
+nav li:first-child{
+	padding-left:0px;
+}
+
+nav li:last-child{
+	padding-right:0px;
+}
+
 
 nav ul li a{
 	color:black;
@@ -70,6 +80,7 @@ nav ul li a{
 .contact{
 	float:right;
 	margin-top:43px;
+	-border: 1px solid blue;
 }
 
 .lineHead{
