--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 .container {
 	width:1024px;
 	margin: 0px auto;
+	border: 1px solid red;
 }
 
 .logo{
@@ -40,12 +41,14 @@
 
 .logoStatic{
 	float:left;
+	border: 1px solid blue;
 }
 
 .name{
 	float:left;
 	margin-top:47px;
 	text-transform:uppercase;
+	border: 1px solid blue;
 }
 
 nav{
@@ -78,8 +81,7 @@ nav ul li a{
 }
 
 .contact{
-	float:left;
-	margin-left:70px;
+	float:right;
 	margin-top:43px;
 	border: 1px solid blue;
 }
