--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ h1 {
 
 
 .container {
-	width:970px;
+	min-width:970px;
+	max-width:1024px;
 	margin: 0px auto;
 	border: 1px solid red;
 }
@@ -60,7 +61,7 @@ h1 {
 nav{
 	float:left;
 	margin-top:70px;
-	margin-left:35px;
+	margin-left:5%;
 }
 
 nav ul li{
