--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1 {
 	min-width:970px;
 	max-width:1024px;
 	margin: 0px auto;
-	border: 1px solid red;
+	-border: 1px solid red;
 }
 
 .logo{
@@ -48,14 +48,14 @@ h1 {
 
 .logoStatic{
 	float:left;
-	border: 1px solid blue;
+	-border: 1px solid blue;
 }
 
 .name{
 	float:left;
 	margin-top:47px;
 	text-transform:uppercase;
-	border: 1px solid blue;
+	-border: 1px solid blue;
 }
 
 nav{
@@ -68,7 +68,7 @@ nav ul li{
 	float:left;
 	list-style:none;
 	padding:0px 31px;
-	border: 1px solid blue;
+	-border: 1px solid blue;
 }
 
 nav li:first-child{
@@ -90,7 +90,8 @@ nav ul li a{
 .contact{
 	float:right;
 	margin-top:43px;
-	border: 1px solid blue;
+	-border: 1px solid blue;
+	font-weight: 700;
 }
 
 .lineHead{
