--- a/style.css
+++ b/style.css
@@ -114,9 +114,49 @@ nav ul li a:hover{
 	-khtml- box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
 }
 
+.linefooter{
+	margin-top:50px;
+	height:1px;
+	background:#eaebec;
+	
+	box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+	-moz-   box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+	-ms-    box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+	-o-     box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+	-khtml- box-shadow: 0px 1px 3px rgba(0,0,0,0.1);
+}
+
 .clear{
 	clear:both;
 }
+
+.borderSkils{
+	width:268px;
+	height:181px;
+	border: 1px solid #dedede;
+	
+	box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+	-moz-   box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+	-ms-    box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+	-o-     box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+	-khtml- box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+}
+
+.borderSkils p{
+	margin-top:27px;
+	margin-left:41px;
+	line-height:15px;
+	
+}
+
+.borderSkils .title{
+	font-size:22px;
+	font-weight:700;
+	line-height:35px;
+}
+
 
 
 
