--- a/style.css
+++ b/style.css
@@ -132,7 +132,10 @@ nav ul li a:hover{
 }
 
 .borderSkils{
-	width:268px;
+	margin-left:1.3%;
+	float:left;
+	
+	width:230px;
 	height:181px;
 	border: 1px solid #dedede;
 	
@@ -142,6 +145,10 @@ nav ul li a:hover{
 	-ms-    box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
 	-o-     box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
 	-khtml- box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+}
+
+.borderSkils:first-child{
+	margin-left:0px;
 }
 
 .borderSkils p{
