--- a/style.css
+++ b/style.css
@@ -131,8 +131,13 @@ nav ul li a:hover{
 	clear:both;
 }
 
+.all{
+	position:relative ;
+	height:187px;
+	border: 1px solid blue;
+}
+
 .borderSkils{
-	margin-left:1.3%;
 	float:left;
 	
 	width:230px;
@@ -145,6 +150,24 @@ nav ul li a:hover{
 	-ms-    box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
 	-o-     box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
 	-khtml- box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+}
+
+.borderSkils:nth-child(1){
+	left:0;
+}
+
+.borderSkils:nth-child(2){
+	-width: calc(100%-460px);
+	-margin-left:calc(100%-460px);
+	left:50%;
+}
+
+.borderSkils:nth-child(3){
+	left:calc(100%-460px);
+}
+
+.borderSkils:nth-child(4){
+	right:0;
 }
 
 .borderSkils:first-child{
@@ -163,6 +186,8 @@ nav ul li a:hover{
 	font-weight:700;
 	line-height:35px;
 }
+
+
 
 
 
