--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ nav ul li a:hover{
 	width:calc(100% + 5px);
 	height:187px;
 	-border: 1px solid blue;
-	outline: 1px solid #666;
+	-outline: 1px solid #666;
 	overflow:hidden;
 }
 
