--- a/style.css
+++ b/style.css
@@ -95,10 +95,19 @@ nav ul li a:hover{
 }
 
 .contact{
+	width:135px;
 	float:right;
 	margin-top:43px;
-	-border: 1px solid blue;
+	-border: 1px solid #000;
 	font-weight: 300;
+}
+
+.tel{
+	float:right;
+}
+
+.email{
+	float:right;
 }
 
 .lineHead{
