--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 	font-family: 'Fira Sans', sans-serif;
 	font-weight:300;
 	font-size:14px;
+	/*background-image: url(img/Paper.jpg)*/
 }
 
 
@@ -39,7 +40,7 @@ h1 {
 	position: absolute;
 	width: 90px;
 	height: 90px;
-	background: #428bca;
+	background: #273339;
 	border-radius: 50px;
 	-moz-border-radius: 50px;
 	-webkit-border-radius: 50px;
@@ -99,7 +100,7 @@ nav ul li a:hover{
 	float:right;
 	margin-top:43px;
 	-border: 1px solid #000;
-	font-weight: 300;
+	font-weight: 700;
 }
 
 .tel{
@@ -147,6 +148,12 @@ nav ul li a:hover{
 	-border: 1px solid blue;
 	-outline: 1px solid #666;
 	overflow:hidden;
+	margin-top:35px;
+	
+}
+
+.containerBanner{
+	overflow:hidden;
 }
 
 .borderSkils{
@@ -156,6 +163,7 @@ nav ul li a:hover{
 	margin-left:20px;
 	height:181px;
 	border: 1px solid #dedede;
+	/*background-color:white;*/
 	
 	box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
 	-moz-   box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
@@ -164,25 +172,22 @@ nav ul li a:hover{
 	-o-     box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
 	-khtml- box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
 }
-/*
-.borderSkils:nth-child(1){
-	left:0;
+
+.borderSkilsTheRest{	
+	width:100%;
+	margin-top:20px;
+	height:300px;
+	border: 1px solid #dedede;
+	/*background-color:white;*/
+	
+	box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+	-moz-   box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+	-webkit-box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+	-ms-    box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+	-o-     box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
+	-khtml- box-shadow: 3px 5px 5px rgba(0,0,0,0.1);
 }
 
-.borderSkils:nth-child(2){
-	-width: calc(100%-460px);
-	-margin-left:calc(100%-460px);
-	left:50%;
-}
-
-.borderSkils:nth-child(3){
-	left:calc(100%-460px);
-}
-
-.borderSkils:nth-child(4){
-	right:0;
-}
-*/
 .borderSkils:first-child{
 	margin-left:0px;
 }
@@ -200,6 +205,35 @@ nav ul li a:hover{
 	line-height:35px;
 }
 
+.borderSkilsTheRest .titleRest{
+	font-size:22px;
+	font-weight:300;
+	line-height:35px;
+	margin-top:27px;
+	margin-left:41px;
+	line-height:15px;
+}
+
+.borderSkilsTheRest{
+	overflow:hidden;
+	height:450px;
+}
+
+.SkilsOfBank{
+	display:inline-block;
+	float:left;
+	width:420px;
+	margin-left:41px;
+	margin-right:20px;
+	line-height:15px;
+	/*border:1px solid red;*/
+}
+
+.SkilsOfBank .titleBank{
+	font-size:22px;
+	font-weight:700;
+	line-height:35px;
+}
 
 
 
