--- a/style.css
+++ b/style.css
@@ -154,8 +154,8 @@ nav ul li a:hover{
 }
 
 .containerBanner{
-	/*height:482px;
-	overflow:hidden;*/
+	height:482px;
+	overflow:hidden;
 }
 
 .borderSkils{
