--- a/style.css
+++ b/style.css
@@ -219,6 +219,8 @@ nav ul li a:hover{
 .borderSkilsTheRest{
 	overflow:hidden;
 	height:450px;
+	margin-top:27px;
+	margin-left:41px;
 }
 
 .SkilsOfBank{
