--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	font-family: 'Fira Sans', sans-serif;
 	font-weight:300;
 	font-size:14px;
-	/*background-image: url(img/Paper.jpg)*/
+	background-color:#fafafa;
 }
 
 
