--- a/style.css
+++ b/style.css
@@ -61,10 +61,9 @@ h1 {
 }
 
 nav{
-	position: absolute;
+	-position: absolute;
 	float:left;
 	margin-top:70px;
-	margin-left:260px;
 }
 
 nav ul li{
