--- a/style.css
+++ b/style.css
@@ -398,8 +398,7 @@ nav ul li a:hover{
 
 	overflow: hidden;
 
-	min-width: 970px;
-	max-width: 1024px;
+	width: 1024px;
 	height: 529px;
 	margin: 0 auto;
 }
